fixed positioning on smaller screens

--- a/src/styles/canvas.scss
+++ b/src/styles/canvas.scss
@@ -122,7 +122,7 @@ h1 {
   font-family: pixel2;
 }
 
-@media screen and (max-width: 1300px) {
+@media screen and (max-width: 1500px) {
   h1 {
     top: 4%; /* Adjust according to your design */
     left: 50%;
